# proc_codegen

./: Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: conf.rs  genstruct.rs  lib.rs  util.rs
confs/: method.toml
src/: main.rs
