[package]
name = "proc_codegen"
version = "0.1.0"
authors = ["blackanger <blackanger.z@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.3.1"
toml = "0.5"
serde = {version="1.0", features=["derive"]}

[dependencies.codegen]
version = "0.1"
path = "codegen"
