[package]
name = "codegen"
version = "0.1.0"
authors = ["blackanger <blackanger.z@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.30"
quote = "1.0.6"
proc-macro2 = "1.0.18"
heck = "0.3.1"
toml = "0.5"
serde = {version="1.0", features=["derive"]}